--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>Scissor-Magic</title>
 </head>
 <body>
-<h1>Hello World!!!</h1>
-<img src="scissor-magic-logo.jpg">
+<img src="scissor-magic-logo.jpg"><br>
+<a href="index.html">- Home</a><br>
+<a href="producten.html">- Producten</a><br>
+<a href="salons.html">- Salons</a><br>
+<a href="openings.html">- Openingstijden</a><br>
 
 </body>
 </html>
