--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
 </head>
 <body>
 <img src="scissor-magic-logo.jpg"><br>
-<a href="index.html">- Home</a><br>
-<a href="producten.html">- Producten</a><br>
-<a href="salons.html">- Salons</a><br>
-<a href="openings.html">- Openingstijden</a><br>
+<nav>
+<ul>
+
+<li><a href="index.html">Home</a></li>
+<li><a href="producten.html">Producten</a></li>
+<li><a href="salons.html">Salons</a></li>
+<li><a href="openings.html">Openingstijden</a></li>
+
+</ul>
+</nav><br>
+
+
+<table border="1"
+<tr>
+    <td colspan="2">Prijzen</td>
+</tr>
+<tr>
+    <td colspan="2">Professioneel Advies</td>
+    <td rowspan="2">€ 15,00</td>
+</tr>
+<tr>
+    <td colspan="2">Highlights</td>
+</tr>
+<tr>
+    <td colspan="2">Wassen, Knippen en Drogen</td>
+    <td rowspan="2">€ 12,50</td>
+</tr>
+<tr>
+    <td colspan="2">Kleurspoeling</td>
+</tr>
+<tr>
+    <td colspan="2">Permanente kleuring</td>
+    <td rowspan="3">€ 32,75</td>
+</tr>
+<tr>
+    <td colspan="2">Model Föhnen</td>
+</tr>
+<tr>
+    <td colspan="2">Bayalage</td>
+</tr>
+</table>
 
 </body>
 </html>
