--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
 <tr>
     <td colspan="2">Bayalage</td>
 </tr>
-</table>
+</table><br>
+
+<img src="Mohawk_-_Millennium_Park.jpg">
+<img src="people-homeless-m-person-144247.jpeg">
+<img src="Morris_Chestnut_by_Gage_Skidmore.jpg">
+
 
 </body>
 </html>
