--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
 </tr>
 </table><br>
 
+<footer>
+
 <img src="Mohawk_-_Millennium_Park.jpg">
 <img src="people-homeless-m-person-144247.jpeg">
-<img src="Morris_Chestnut_by_Gage_Skidmore.jpg">
+<a href="kaal.html"</a> <img src="Morris_Chestnut_by_Gage_Skidmore.jpg">
+
+</footer>
 
 
 </body>
