Opdracht 8 link naar producten

--- a/producten.html
+++ b/producten.html
@@ -9,7 +9,15 @@
 <h1>Producten</h1>
 <a href="index.html">- Home</a><br>
 <a href="salons.html">- Salons</a><br>
-<a href="openings.html">- Openingstijden</a><br>
+<a href="openings.html">- Openingstijden</a><br><br>
+
+<h1>Ultra Sheen Supreme</h1><br>
+<h3>Johnson Products Company inc. Chicago, Illinois</h3>
+
+<img src="ultra-sheen-logo.jpg"><br>
+<img src="ultra_sheen_02.jpg">
+<img src="ultra_sheen_03.jpg">
+<img src="ultra_sheen_04.jpg">
 
 
 </body>
