--- a/salons.html
+++ b/salons.html
@@ -10,5 +10,8 @@
 <a href="index.html">- Home</a><br>
 <a href="producten.html">- Producten</a><br>
 <a href="openings.html">- Openingstijden</a><br>
+<h1>Ons Salon:</h1>
+<img src="barbershop3.jpg"><br>
+<img src="Schermafbeelding%202017-09-29%20om%2013.51.04.png">
 </body>
 </html>
