--- a/salons.html
+++ b/salons.html
@@ -12,6 +12,6 @@
 <a href="openings.html">- Openingstijden</a><br>
 <h1>Ons Salon:</h1>
 <img src="barbershop3.jpg"><br>
-<img src="Schermafbeelding%202017-09-29%20om%2013.51.04.png">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1369.0512878236757!2d-1.3288633565846963!3d50.966290731817416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4874728b335006f7%3A0x64f3c61f4ceabebf!2sScissor+Magic!5e0!3m2!1snl!2snl!4v1506686165567" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </body>
 </html>
