--- a/openings.html
+++ b/openings.html
@@ -7,9 +7,70 @@
 <body>
 <img src="scissor-magic-logo.jpg"><br>
 <h1>Openingstijden</h1>
-<a href="index.html">- Home</a><br>
-<a href="producten.html">- Producten</a><br>
-<a href="salons.html">- Salons</a><br>
+
+<ul>
+    <li><a href="index.html">Home</a></li><br>
+    <li><a href="producten.html">Producten</a></li><br>
+    <li><a href="salons.html">Salons</a></li><br>
+</ul>
+
+<table border="1"
+       <tr>
+           <td colspan="2">Openingstijden</td>
+       </tr>
+       <tr>
+           <td colspan="2">Kapsalon Scissor Magic in Huizen</td>
+       </tr>
+       <tr>
+           <td colspan="1">ma-vr</td>
+           <td colspan="1">za</td>
+           <td colspan="1">zo</td>
+       </tr>
+       <tr>
+           <td colspan="1">09:00-12:00</td>
+           <td colspan="1">09:00-12:00</td>
+           <td rowspan="2">Gesloten</td>
+       </tr>
+       <tr>
+           <td colspan="1">13:30-18:00</td>
+           <td colspan="1">13:30-17:00</td>
+
+       </tr>
+       <tr>
+           <td colspan="2">Kapsalon Scissor Magic in Naarden</td>
+       </tr>
+       <tr>
+           <td colspan="1">ma-vr</td>
+           <td colspan="1">za</td>
+           <td colspan="1">zo</td>
+       </tr>
+       <tr>
+           <td colspan="1">09:00-12:00</td>
+           <td colspan="1">09:00-12:00</td>
+           <td rowspan="2">Gesloten</td>
+       </tr>
+       <tr>
+           <td colspan="1">14:30-18:00</td>
+           <td colspan="1">14:30-18:00</td>
+       </tr>
+       <tr>
+           <td colspan="2">Kapsalon Scissor Magic in Utrecht</td>
+       </tr>
+       <tr>
+           <td colspan="1">ma-vr</td>
+           <td colspan="1">za</td>
+           <td colspan="1">zo</td>
+       </tr>
+       <tr>
+           <td colspan="1">09:00-12:00</td>
+           <td colspan="1">09:00-12:00</td>
+           <td rowspan="2">Gesloten</td>
+       </tr>
+       <tr>
+           <td colspan="1">14:30-17:00</td>
+           <td colspan="1">14:30-16:00</td>
+       </tr>
+</table>
 
 </body>
 </html>
