--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Scissor-Magic</title>
 </head>
+<style>
+
+</style>
 <body>
 <img src="scissor-magic-logo.jpg"><br>
 <nav>
