--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Scissor-Magic</title>
 </head>
 <style>
-
+body {
+    background-color: white;
+}
 </style>
 <body>
 <img src="scissor-magic-logo.jpg"><br>
